; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_jz4725b.c_jz4725b_codec_dev_probe.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_jz4725b.c_jz4725b_codec_dev_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.jz_icdc = type { i32, %struct.regmap* }
%struct.regmap = type { i32 }

@JZ4725B_CODEC_REG_AICR = common dso_local global i32 0, align 4
@REG_AICR_CONFIG1_OFFSET = common dso_local global i32 0, align 4
@JZ4725B_CODEC_REG_CCR1 = common dso_local global i32 0, align 4
@REG_CCR1_CONFIG4_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*)* @jz4725b_codec_dev_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @jz4725b_codec_dev_probe(%struct.snd_soc_component* %0) #0 {
  %2 = alloca %struct.snd_soc_component*, align 8
  %3 = alloca %struct.jz_icdc*, align 8
  %4 = alloca %struct.regmap*, align 8
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %2, align 8
  %5 = load %struct.snd_soc_component*, %struct.snd_soc_component** %2, align 8
  %6 = call %struct.jz_icdc* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %5)
  store %struct.jz_icdc* %6, %struct.jz_icdc** %3, align 8
  %7 = load %struct.jz_icdc*, %struct.jz_icdc** %3, align 8
  %8 = getelementptr inbounds %struct.jz_icdc, %struct.jz_icdc* %7, i32 0, i32 1
  %9 = load %struct.regmap*, %struct.regmap** %8, align 8
  store %struct.regmap* %9, %struct.regmap** %4, align 8
  %10 = load %struct.jz_icdc*, %struct.jz_icdc** %3, align 8
  %11 = getelementptr inbounds %struct.jz_icdc, %struct.jz_icdc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @clk_prepare_enable(i32 %12)
  %14 = load %struct.regmap*, %struct.regmap** %4, align 8
  %15 = load i32, i32* @JZ4725B_CODEC_REG_AICR, align 4
  %16 = load i32, i32* @REG_AICR_CONFIG1_OFFSET, align 4
  %17 = shl i32 15, %16
  %18 = call i32 @regmap_write(%struct.regmap* %14, i32 %15, i32 %17)
  %19 = load %struct.regmap*, %struct.regmap** %4, align 8
  %20 = load i32, i32* @JZ4725B_CODEC_REG_CCR1, align 4
  %21 = load i32, i32* @REG_CCR1_CONFIG4_OFFSET, align 4
  %22 = shl i32 0, %21
  %23 = call i32 @regmap_write(%struct.regmap* %19, i32 %20, i32 %22)
  ret i32 0
}

declare dso_local %struct.jz_icdc* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @clk_prepare_enable(i32) #1

declare dso_local i32 @regmap_write(%struct.regmap*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
